@@ -186,7 +186,7 @@ extern U8 level;
     pTag = &Cache.Tags[ (Cache.Index-1)&(CacheSize-1) ];
   }
 int XMLModel1::p(Mixer& m,int val1,int val2){
-    if (x.filetype==DBASE ||x.filetype==HDR ||x.filetype==DECA || x.filetype==ARM  || x.filetype==IMGUNK|| x.filetype==BINTEXT){
+    if (x.filetype==DBASE ||x.filetype==HDR ||x.filetype==DECA || x.filetype==ARM  || x.filetype==IMGUNK/*|| x.filetype==BINTEXT*/){
         if (val2==-1) return 1;
         for (int i=0; i<inputs(); ++i)
         m.add(0);
